<resources>
    <string name="app_name">Pairtodo</string>
    <string name="title_activity_first_task" translatable="false">FirstTaskActivity</string>
    <integer name="com_vk_sdk_AppId">5871848</integer>
    <string name="facebook_app_id" translatable="false">1258902080871682</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="bottombar_tasks">Tasks</string>
    <string name="bottombar_profile">Profile</string>
    <string name="bottombar_shop">Shop</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="title_activity_shop_item" translatable="false">ShopItemActivity</string>
    <string name="title_activity_shop_category" translatable="false">ShopCategoryActivity</string>
    <string name="title_activity_task" translatable="false"></string>
    <string name="title_activity_stats" translatable="false">StatsActivity</string>
    <string name="intro_text">Communicate only together, a special chat for couples</string>
    <string name="intro_start_text">Start</string>
    <string name="sign_up_step_one_title">Step 1. Sign up</string>
    <string name="please_enter_correct_values">Enter correct values</string>
    <string name="enter_correct_password">Enter correct password</string>
    <string name="enter_correct_phone">Enter correct phone</string>
    <string name="name_in_latin">"Incorrect name "</string>
    <string name="your_name_hint">Your name</string>
    <string name="your_number_hint">Your phone number</string>
    <string name="password_hint">Password</string>
    <string name="register_button">Sign up</string>
    <string name="already_register">Already registred</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="or">or</string>
    <string name="forget_password">Forget password?</string>
    <string name="step_two_invite">Step 2. Invite your couple</string>
    <string name="you_almost_done_invite_couple">You\'re almost there! Now invite your couple!</string>
    <string name="couple_phone">Enter your couple\'s phone</string>
    <string name="search_in_contacts">Search in contacts</string>
    <string name="send_invitation">An invitation is sent!</string>
    <string name="search_couple">Search my couple</string>
    <string name="my_stats">Statistics</string>
    <string name="my_gifts">Gifts</string>
    <string name="no_couple">Your couple hasn\'t joined yet!</string>
    <string name="chat">Chat with </string>
    <string name="start_conversation_with_couple">Start conversation with your couple!</string>
    <string name="sticker">Sticker</string>
    <string name="dialog_with">Dialog with </string>
    <string name="my_tasks">My tasks</string>
    <string name="couple_tasks">Couple tasks</string>
    <string name="empty_tasks">Add first task!</string>
    <string name="themes">Themes</string>
    <string name="gifts">Gifts</string>
    <string name="stickers">Stickers</string>
    <string name="discuss_task">Discuss the task</string>
    <string name="assigned">Assigned to</string>
    <string name="today">Today</string>
    <string name="due_date">Due date</string>
    <string name="enter_item">Enter item</string>
    <string name="enter_first_item">Enter first item</string>
    <string name="personal_task">myself</string>
    <string name="couple">couple</string>
    <string name="what_to_do">What to do</string>
    <string name="task_for">Task for</string>
    <string name="description">Description</string>
    <string name="new_task">New task</string>
    <string name="tommorow">Tommorow</string>
    <string name="no_time_limit">No time limit</string>
    <string name="date">Date</string>
    <string name="select_date">Select due date</string>
    <string name="error_try_again">Error! Please try again!</string>
    <string name="message">Message</string>
    <string name="task_discussion">Task discussion</string>
    <string name="select_sticker">Select sticker</string>
    <string name="themes_name">Themes</string>
    <string name="gifts_name">Gifts</string>
    <string name="sticker_name">Stickers</string>
    <string name="my_gifts_tab">My gifts</string>
    <string name="couples_gifts">Couple\'s gifts</string>
    <string name="send">Send</string>
    <string name="Enter">Enter the text for the postcard</string>
    <string name="gift_sent">Gift sent to your couple!</string>
    <string name="gift_not_sent_try_again">Gift not send, please try again!</string>
    <string name="network_error">No network available!</string>
    <string name="network_error_local">Network error. Messages is loaded from local storage</string>
    <string name="inivite_send">Invite sent, please wait for your couple!</string>
    <string name="by_phone">By phone</string>
    <string name="find_your_couple">Find your couple</string>
    <string name="correct_login_password" translatable="false">Fail! User doesnt exists or enter correct login/password fields!</string>
    <string name="change_name">Change name</string>
    <string name="change_nick">Change nick</string>
    <string name="change_email">Change email</string>
    <string name="accept">Accept</string>
    <string name="cancel">cancel</string>
    <string name="stats">Statistics</string>
    <string name="done_stats">Done</string>
    <string name="above_deadline">Failed deadline</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="please_enter_new_name">Please enter new name</string>
    <string name="please_enter_new_nick">Please enter new nickname</string>
    <string name="please_enter_new_email">Please enter new email</string>
    <string name="settings">Settings</string>
    <string name="name">Name</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="photo">Photo</string>
    <string name="remove_couple">Remove couple</string>
    <string name="change_theme">Change theme</string>
    <string name="log_out">Log out</string>
    <string name="about_app">About app</string>
    <string name="uncompleted_tasks">Uncompleted</string>
    <string name="you_created_couple">You created a couple!</string>
    <string name="new_message_from_couple">New message from couple!</string>
    <string name="couple_joined">Your couple joined!</string>
    <string name="you_got_gift">You got a gift!</string>
    <string name="you_have_changes">You have changes in your tasks!</string>
    <string name="no_gifts">No gifts!</string>
  <string name="message_fail">Message isnt delievered!</string>
</resources>
