<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/white"
            android:visibility="visible"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:id="@+id/registrationLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/couple_image_invite" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/you_almost_done_invite_couple"
                    android:textAlignment="center" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/imageView6">

                        <EditText
                            android:id="@+id/input_phone"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789 -."
                            android:hint="@string/couple_phone"
                            android:textColorHint="#ffffff" />


                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_phone24" />
                </RelativeLayout>

                <Button
                    android:id="@+id/btn_invite_couple"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/search_in_contacts"
                    android:textColor="@android:color/white" />


            </LinearLayout>


        </android.support.v7.widget.CardView>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>


    <Button
        android:id="@+id/btn_confirm_send_couple"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorAccent"
        android:text="@string/send_invitation"
        android:textColor="@android:color/white"
        android:visibility="gone" />


</android.support.design.widget.CoordinatorLayout>
