<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="top"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_collapseMode="pin" />

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_tool_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="2dp"
            app:expandedTitleTextAppearance="@style/Widget.AppCompat.ActionBar.TabText"
            app:statusBarScrim="?attr/colorAccent">


        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="56dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lNameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/fNameLayout"
                    android:layout_marginTop="10dp"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    app:layout_anchor="@id/appbar">

                    <EditText
                        android:id="@+id/noteTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/what_to_do"
                        android:textSize="30sp" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingTop="24dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".notes.AttachActivity">

        <FrameLayout
            android:id="@+id/attach_fragment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="245dp"
                        android:layout_height="wrap_content"
                        android:text="@string/task_for"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/coupleTask"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/couple"
                            android:textColor="@color/colorAccent"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/yourselfTask"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:text="@string/personal_task"
                            android:textSize="24sp" />

                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp">

                    <LinearLayout
                        android:id="@+id/subtask_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/currentList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enter_first_item"
                            android:textSize="18sp" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp">

                                <EditText
                                    android:id="@+id/list_note_item"
                                    android:layout_width="@dimen/profile_layout_height"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:hint="@string/enter_item"
                                    android:textSize="14sp" />

                                <ImageView
                                    android:id="@+id/add_list_note_item"
                                    android:layout_width="24dp"
                                    android:layout_height="24dp"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginStart="16dp"
                                    android:background="@drawable/ic_add24" />

                            </LinearLayout>

                        </FrameLayout>


                    </LinearLayout>

                    <EditText
                        android:id="@+id/note_description"
                        android:layout_width="260dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/description"
                        android:textSize="20sp"
                        android:visibility="visible" />


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:weightSum="2">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:background="@drawable/ic_format_list_bulleted_black_24dp"
                            android:id="@+id/show_subtask_view" />

                        <ProgressBar
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:visibility="gone"
                            android:id="@+id/progressImage"
                            android:layout_width="36dp"
                            android:layout_height="36dp" />

                        <ImageView
                            android:visibility="visible"
                            android:id="@+id/photoTaskImage"
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="16dp"
                            android:layout_weight="1"
                            android:src="@drawable/ic_photo_black_24dp" />

                    </LinearLayout>

                </FrameLayout>


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp">

                    <TextView
                        android:layout_width="230dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/due_date"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/dut_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/today"
                        android:textColor="?attr/colorAccent"
                        android:textSize="26sp" />

                </FrameLayout>

                <com.etiennelawlor.discreteslider.library.ui.DiscreteSlider
                    android:id="@+id/discrete_slider"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_gravity="bottom"
                    app:backdropFillColor="?attr/colorPrimary"
                    app:backdropStrokeColor="?attr/colorPrimary"
                    app:backdropStrokeWidth="1dp"
                    app:horizontalBarThickness="4dp"
                    app:position="1"
                    app:progressDrawable="@drawable/transparent_progress_drawable"
                    app:thumb="@drawable/thumb"
                    app:tickMarkCount="4"
                    app:tickMarkRadius="2dp" />

                <RelativeLayout
                    android:id="@+id/tick_mark_labels_rl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="12dp" />

            </LinearLayout>

        </FrameLayout>


    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_add_white24"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end" />


</android.support.design.widget.CoordinatorLayout>