<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark" />

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/sign_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@android:color/white"
            android:visibility="visible"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:id="@+id/registrationLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                >


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/imageView10">

                        <EditText
                            android:id="@+id/input_email"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"

                            android:hint="Email"
                            android:inputType="text"
                            android:textColorHint="#ffffff" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_email24" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_toRightOf="@+id/imageView3">

                        <EditText
                            android:id="@+id/input_password"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password_hint"

                            android:inputType="textPassword"
                            android:textColorHint="#ffffff" />

                    </android.support.design.widget.TextInputLayout>

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_password24" />
                </RelativeLayout>


                <Button
                    android:id="@+id/btn_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_in"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/or"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:scaleType="centerCrop"
                        android:layout_weight="1"
                        android:src="@drawable/vk_logo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:id="@+id/vk_auth"
                        android:layout_marginEnd="32dp"
                        />

                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:scaleType="centerCrop"
                        android:layout_weight="1"
                        android:src="@drawable/fb_logo"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:id="@+id/fb_auth"
                        />

                </LinearLayout>



            </LinearLayout>


        </android.support.v7.widget.CardView>

        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>


    <LinearLayout
        android:weightSum="2"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/forget_password"
            android:textColor="@android:color/white" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
